# tirface-pam

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  install.install  local-source
.github/workflows/: publish.yaml
config/: org.freedesktop.TirfacePam1.conf  tirface-pam.conf  tirface-pam.service
src/: config.rs  constants.rs  crypto.rs  db.rs  error.rs  lib.rs  pam_bindings.rs  paths.rs
src/camera/: device.rs  ir_emitter.rs  mod.rs  stream.rs
src/daemon/: dbus.rs  error.rs  mod.rs
src/models/: mod.rs  traits.rs
src/models/arcface/: mod.rs
src/models/mobilefacenet/: mod.rs
src/models/openvino_rec/: mod.rs
src/models/rustface/: mod.rs
tests/: biometric_benchmark.rs  cli_simulation.rs  config_test.rs  dummy_camera_test.rs  ir_hardware_test.rs  model_integration.rs
