[package]
name = "tirface-pam"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "tirface-pam-daemon"
path = "src/bin/daemon/main.rs"

[[bin]]
name = "tirface-pam-cli"
path = "src/bin/cli/main.rs"

[lib]
name = "pam_tirface_pam"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25.10"
imageproc = "0.27.0"
ndarray = "0.17.2"
ort = "2.0.0-rc.12"
rustface = "0.1.7"
v4l = "0.14.0"
crossterm = "0.29.0"
ratatui = "0.30.0"
aes-gcm = "0.10.3"
rsa = "0.9.10"
rand = "0.10.1"
sha2 = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.25.0"
libc = "0.2.186"
toml = "1.1.2"
serde_derive = "1.0.228"
log = "0.4.30"
env_logger = "0.11.10"
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }
openvino = { version = "0.11.0", features = ["runtime-linking"] }
zbus = "5.16.0"
rusqlite = { version = "0.40.1" }
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1.38.0", features = ["full"] }
